--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Main2Activity"></activity>
         <activity
             android:name=".FruitActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:screenOrientation="portrait"
             android:theme="@style/FruitActivityTheme"
-            tools:ignore="LockedOrientationActivity"></activity>
-        <activity android:name=".BigImgActivity" />
+            tools:ignore="LockedOrientationActivity" />
+        <activity android:name=".view.BigImgActivity" />
         <activity
             android:name=".FuritActivity1"
             android:configChanges="orientation|screenSize|keyboardHidden"
